fix: stabilize investment flows